--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,15 @@ body{
   background: #FFF;
 }
 
+.imghrs{
+  display: flex;
+  justify-content: center;
+}
+
 li{
   list-style: none;
 }
+
 .hours{
   font-family: Lato;
   font-size: 150%;
@@ -23,11 +29,33 @@ li{
 }
 
 .nav{
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
-  top: 0;
+  position: relative;
 }
 
 .nav li {
-  float: left;
+    /* float: left; */
+    display: inline-block;
+    bottom: 0;
+    margin-top: 20px;
+    margin-left: 1px;
+    margin-right: 1px;
+}
+
+.nav li a{
+  display: block;
+  color: black;
+  padding: 14px 16px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 100%;
+  font-family: Lato;
+  background-color: white;
+}
+
+.navwrap{
+  background-color: #B22222;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+  /* width: 100vw; */
 }
