--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:Light');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Source+Serif+Pro');
 
 body{
   background: #FFF;
 }
 
+.main{
+  width: 100vw;
+}
+
 .imghrs{
   /* display: flex; */
+  font-family: Source Serif Pro;
   height: 100vh;
   width: 100vw; 
   background-image: url("https://gaijinpot.scdn3.secure.raxcdn.com/app/uploads/sites/4/2017/05/Izakaya-1-1024x683.jpg");
@@ -23,8 +29,15 @@ body{
   font-size: 9vw;
 }
 
-li{
-  list-style: none;
+.imghrs li{
+  font-size: 3vw;
+  display: inline-block;
+  padding: 1vw;
+}
+
+.imghrs ul{
+  margin: 0;
+  padding: 0;
 }
 
 .hours{
@@ -33,6 +46,18 @@ li{
   display: inline-block;
   width: 50vw;
   padding: 0;
+  vertical-align: middle;
+}
+
+.hours li{
+  list-style: none;
+  text-align: center;
+}
+
+.kigaru-image{
+  width: 50vw;
+  display:inline-block;
+  vertical-align: middle;
 }
 
 .nav{
@@ -133,7 +158,7 @@ body{
 
 .footer{
   background-color: #464646;
-  height: 10vh;
+  height: 5vh;
   color: white;
   display: table;
   width: 100vw;
@@ -146,5 +171,9 @@ body{
   display: table-cell;
   vertical-align: middle;
   font-family: Lato;
-  
+  font-size: 1.25vw;
+}
+
+.MuiListItemIcon-root img{
+  height: 30px;
 }
