--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,7 @@ body{
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
+  z-index: 3;
   /* width: 100vw; */
 }
 
@@ -108,6 +109,7 @@ body{
   width: 80vw;
   border-radius: 20px;
   margin: 30px;
+  z-index: 2;
 }
 
 .menu-title{
@@ -169,6 +171,7 @@ body{
   color: white;
   display: table;
   width: 100vw;
+  position: relative;
 }
 
 .footer p{
@@ -193,10 +196,14 @@ a{
   color: black;
 }
 
-/* .mobile-menu-back{
+.mobile-menu-back{
   background-image: url(./pictures/backgrounds/wall2.jpg);
   height: 100vh;
   width: 100vw;
   position: fixed;
   top: 0;
-} */
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+
+}
