--- a/src/index.css
+++ b/src/index.css
@@ -12,30 +12,47 @@ body{
 }
 
 .imghrs{
-  /* display: flex; */
-  font-family: Merriweather;
   height: 100vh;
   width: 100vw; 
   background-image: url("https://gaijinpot.scdn3.secure.raxcdn.com/app/uploads/sites/4/2017/05/Izakaya-1-1024x683.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  animation-name: blurring;
+  animation-duration: 1s;
+  animation-delay: 2s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes blurring{
+  from {filter: blur(0px)}
+  to{filter: blur(2px)}
+}
+
+.title-text{
+  font-family: Merriweather;
 
   text-align: center;
   color: white;
-  display: table-cell;
-  vertical-align: middle;
 
   font-size: 9vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.imghrs li{
+.title-text li{
   font-size: 3vw;
   display: inline-block;
   padding: 1vw;
 }
 
-.imghrs ul{
+.title-text ul{
   margin: 0;
   padding: 0;
 }
