--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ body{
 
 .hours{
   font-family: Lato;
-  font-size: 150%;
+  font-size: 5vw;
   display: inline-block;
   width: 50vw;
   padding: 0;
@@ -239,9 +239,18 @@ a{
   padding: 20px;
 }
 
-/* .menu-back{
-  touch-action: manipulation;
-} */
+.fav-text{
+  font-family: Lato;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+}
+
+.disclaimer{
+  color: #535353;
+  text-align: right;
+  padding-right: 20px;
+}
 
 *{
   touch-action: none;
